# Django

./: .gitignore  README.md  pyproject.toml
pollapp/pollapp/: settings.py  urls.py
pollapp/polls/: admin.py  models.py  tests.py  urls.py  views.py
pollapp/polls/migrations/: 0001_initial.py
pollapp/polls/templates/polls/: detail.html  index.html  results.html
pollapp/templates/admin/: base_site.html
